- Added flight times.
- Cataclysm Classic: For 'Enhance dressup' ('Interface'), you can now set the character model zoom speed.

3.0.188 - 10th April 2004
- The addon will no longer show 'Wrong version installed' when run on Cataclysm Classic.
- Added flight times.

3.0.187 - 3rd April 2024
- Added flight times.

3.0.186 - 27th March 2024
- Added flight times.

3.0.185 - 20th March 2024
- Added flight times.

3.0.184 - 13th March 2024
- For 'Enhance minimap' ('Interface'), the 'Combine addon buttons' setting will now sort addon buttons alphabetically.
- Added flight times.

3.0.183 - 6th March 2024
- Added flight times.

3.0.182 - 28th February 2024
- Added flight times.

3.0.181 - 22nd February 2024
- Fixed 'Enhance professions' ('Interface').

3.0.180 - 21st February 2024
- Updated ScrollFrameTemplate for Media.
- Updated 'Enhance quest log' ('Interface') code.
- Added flight times.

3.0.179 - 14th February 2024
- For 'Enhanced quest log' ('Interface'), fixed an issue with showing quest level suffixes for non-English locales.
- Added flight times.

3.0.178 - 7th February 2024
- For 'Enhance minimap' ('Interface'), updated tooltip positioning logic.  Added Wowhead Looter button.
- For 'Recent chat window' ('Chat'), scroll speed is now based on font size.
- Added flight times.

3.0.177 - 3rd February 2024
- The 'Enhance minimap' ('Interface') option is now able to display custom buttons correctly if Leatrix Plus is aware of them.
- For 'Automate quests' ('Automation'), quests from Valadar Starsong and Fariel Starsong (Moonglade) will no longer be automated.
- Added flight times.

3.0.176 - 1st February 2024
- Updated translations.

3.0.175 - 31st January 2024
- Added flight times.

3.0.174 - 24th January 2024
- Fixed ScrollFrameTemplate editbox widths.
- Added flight times.

3.0.173 - 17th January 2024
- For 'Enhance minimap' ('Interface'), the minimum minimap scale is now 50% (was 100%).