@@ -3,6 +3,7 @@
 - Added a new setting called 'Keep audio synced' ('System').  If checked, when you change the audio output device in your operating system, the game audio output device will change automatically.|n|nFor this to work, the game audio output device will be set to system default.
 - Added flight times.
 - Cataclysm Classic: For 'Enhance dressup' ('Interface'), you can now set the character model zoom speed.
+- Cataclysm Classic: For 'Media', added Cataclysm movies ('Movies' and 'Various' > 'Cinematics').
 
 3.0.188 - 10th April 2004
 - The addon will no longer show 'Wrong version installed' when run on Cataclysm Classic.
